--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
 
   <properties>
 		<compiler.version>2.3.2</compiler.version>
-		<hibernate.version>3.6.8.Final</hibernate.version>
+    <hibernate.version>3.6.8.Final</hibernate.version>
+    <hibernateValidator.version>4.2.0.Final</hibernateValidator.version>
 		<slf4j.version>1.6.2</slf4j.version>
 		<javassist.version>3.8.0.GA</javassist.version>
 		<postgresql.version>9.0-801.jdbc4</postgresql.version>
@@ -19,6 +20,7 @@
 		<java.version>1.6</java.version>
     <spring.version>3.0.6.RELEASE</spring.version>
     <slf4jSpring.version>1.6.1</slf4jSpring.version>
+    <aspectj.version>1.6.11</aspectj.version>
   </properties>
 
   <build>
@@ -42,7 +44,12 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>${hibernate.version}</version>
 		</dependency>
-		<dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>${hibernateValidator.version}</version>
+    </dependency>
+    <dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
 			<version>${slf4j.version}</version>
@@ -89,10 +96,25 @@
       <version>${spring.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>com.springsource.slf4j.api</artifactId>
-      <version>${slf4jSpring.version}</version>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjrt</artifactId>
+      <version>${aspectj.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjtools</artifactId>
+      <version>${aspectj.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>${aspectj.version}</version>
+    </dependency>
+<!--     <dependency> -->
+<!--       <groupId>org.slf4j</groupId> -->
+<!--       <artifactId>com.springsource.slf4j.api</artifactId> -->
+<!--       <version>${slf4jSpring.version}</version> -->
+<!--     </dependency> -->
   </dependencies>
 
 </project>
