--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<spring.version>3.0.6.RELEASE</spring.version>
 		<slf4jSpring.version>1.6.1</slf4jSpring.version>
 		<aspectj.version>1.6.11</aspectj.version>
+		<spring-security.version>3.1.0.RELEASE</spring-security.version>
 	</properties>
 
 	<build>
@@ -119,6 +120,16 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aspects</artifactId>
 			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>${spring-security.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring-security.version}</version>
 		</dependency>
 	</dependencies>
 
