--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<aspectj.version>1.6.11</aspectj.version>
 		<spring-security.version>3.1.0.RELEASE</spring-security.version>
 		<cglib.version>2.2.2</cglib.version>
+		<dbcp.version>1.4</dbcp.version>
 	</properties>
 
 	<build>
@@ -161,6 +162,11 @@
 			<groupId>cglib</groupId>
 			<artifactId>cglib</artifactId>
 			<version>${cglib.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>${dbcp.version}</version>
 		</dependency>
 	</dependencies>
 
