--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -6,3 +6,4 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %t %c{2}:%L - %m%n
 
 log4j.category.org.springframework.beans.factory=INFO
+log4j.category.pl.edu.mimuw.ag291541.task2.security=DEBUG
