--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /.settings
 /.idea
 
-task2.ml
-public.sql
-refresh-db.sh
-script-schema.sh
+/task2.iml
+/public.sql
+/refresh-db.sh
+/script-schema.sh
